; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_ps_wakeup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_ps_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lbs_private = type { i32 }

@LBS_DEB_HOST = common dso_local global i32 0, align 4
@LBS802_11POWERMODECAM = common dso_local global i32 0, align 4
@CMD_802_11_PS_MODE = common dso_local global i32 0, align 4
@CMD_SUBCMD_EXIT_PS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lbs_ps_wakeup(%struct.lbs_private* %0, i32 %1) #0 {
  %3 = alloca %struct.lbs_private*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.lbs_private* %0, %struct.lbs_private** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @LBS_DEB_HOST, align 4
  %7 = call i32 @lbs_deb_enter(i32 %6)
  %8 = load i32, i32* @LBS802_11POWERMODECAM, align 4
  %9 = call i32 @cpu_to_le32(i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load %struct.lbs_private*, %struct.lbs_private** %3, align 8
  %11 = load i32, i32* @CMD_802_11_PS_MODE, align 4
  %12 = load i32, i32* @CMD_SUBCMD_EXIT_PS, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @lbs_prepare_and_send_command(%struct.lbs_private* %10, i32 %11, i32 %12, i32 %13, i32 0, i32* %5)
  %15 = load i32, i32* @LBS_DEB_HOST, align 4
  %16 = call i32 @lbs_deb_leave(i32 %15)
  ret void
}

declare dso_local i32 @lbs_deb_enter(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @lbs_prepare_and_send_command(%struct.lbs_private*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @lbs_deb_leave(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
